--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -62,7 +62,11 @@ mruizg_t12.zip
 |       04_salida.xml
 |       05_entrada.xsl
 |       05_salida.xml
-└───mruizg_a06/
+├───mruizg_a06/
+|       artistasej.xml
+|       entrada.xsl
+|       salida_artistasej.html
+└───mruizg_a07/
         01_markdown.md
         02_html.html
         03_xslt.xsl
@@ -111,7 +115,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
 > No es importante si en el resultado se generan líneas en blanco a lo largo del documento.
 {:.prompt-info}
 
-#### Actividad 1.1
+#### Actividad 1-1
 
 Sin etiquetas:
 
@@ -121,7 +125,7 @@ Administración de Sistemas Informáticos en Red Desarrollo de
 Aplicaciones Web Sistemas Microinformáticos y Redes
 ```
 
-#### Actividad 1.2
+#### Actividad 1-2
 
 Párrafos:
 
@@ -134,7 +138,7 @@ Párrafos:
 </html>
 ```
 
-#### Actividad 1.3
+#### Actividad 1-3
 
 Lista:
 
@@ -149,7 +153,7 @@ Lista:
 </html>
 ```
 
-#### Actividad 1.4
+#### Actividad 1-4
 
 Tabla:
 
@@ -198,7 +202,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
 </ies>
 ```
 
-#### Actividad 2.1
+#### Actividad 2-1
 
 Párrafos:
 
@@ -212,7 +216,7 @@ Párrafos:
 </html>
 ```
 
-#### Actividad 2.2
+#### Actividad 2-2
 
 Lista:
 
@@ -229,7 +233,7 @@ Lista:
 </html>
 ```
 
-#### Actividad 2.3
+#### Actividad 2-3
 
 Tabla:
 
@@ -293,7 +297,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
 </ies>
 ```
 
-#### Actividad 3.1
+#### Actividad 3-1
 
 Párrafos:
 
@@ -307,7 +311,7 @@ Párrafos:
 </html>
 ```
 
-#### Actividad 3.2
+#### Actividad 3-2
 
 Lista:
 
@@ -324,7 +328,7 @@ Lista:
 </html>
 ```
 
-#### Actividad 3.3
+#### Actividad 3-3
 
 Tabla:
 
@@ -383,7 +387,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
 </museos>
 ```
 
-#### Actividad 4.1
+#### Actividad 4-1
 
 Convertir las etiquetas en atributos:
 
@@ -396,7 +400,7 @@ Convertir las etiquetas en atributos:
 </museos>
 ```
 
-#### Actividad 4.2
+#### Actividad 4-2
 
 Convertir alguna etiquetas en atributos:
 
@@ -418,7 +422,7 @@ Convertir alguna etiquetas en atributos:
 </museos>
 ```
 
-#### Actividad 4.3
+#### Actividad 4-3
 
 Cambiar la estructura del documento:
 
@@ -443,7 +447,7 @@ Cambiar la estructura del documento:
 </ciudades>
 ```
 
-#### Actividad 4.4
+#### Actividad 4-4
 
 Cambiar la estructura del documento y algunas etiquetas en atributos:
 
@@ -462,7 +466,7 @@ Cambiar la estructura del documento y algunas etiquetas en atributos:
 </ciudades>
 ```
 
-#### Actividad 4.5
+#### Actividad 4-5
 
 Cambiar la estructura del documento y algunas etiquetas en atributos:
 
@@ -495,7 +499,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
 </museos>
 ```
 
-#### Actividad 5.1
+#### Actividad 5-1
 
 Convertir los atributos en etiquetas:
 
@@ -520,7 +524,7 @@ Convertir los atributos en etiquetas:
 </museos>
 ```
 
-#### Actividad 5.2
+#### Actividad 5-2
 
 Convertir algunos atributos en etiquetas:
 
@@ -533,7 +537,7 @@ Convertir algunos atributos en etiquetas:
 </museos>
 ```
 
-#### Actividad 5.3
+#### Actividad 5-3
 
 Cambiar la estructura del documento y convertir algunos atributos en etiquetas:
 
@@ -555,7 +559,7 @@ Cambiar la estructura del documento y convertir algunos atributos en etiquetas:
 </ciudades>
 ```
 
-#### Actividad 5.4
+#### Actividad 5-4
 
 Cambiar la estructura del documento
 
@@ -580,7 +584,7 @@ Cambiar la estructura del documento
 </paises>
 ```
 
-#### Actividad 5.5
+#### Actividad 5-5
 
 Cambiar la estructura del documento
 
@@ -604,6 +608,114 @@ Cambiar la estructura del documento
   </lugar>
 </lugares>
 ```
+
+{:.activity}
+### (Voluntaria) XSLT: Artistas
+
+Escribe una transformación XSLT que a partir de un fichero XML con datos de artistas genere una página web con una tabla con los datos de los artistas.
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<artistas>
+  <artista cod="a101">
+    <nombreCompleto>Diego Velázquez</nombreCompleto>
+    <nacimiento>1599</nacimiento>
+    <fallecimiento>1660</fallecimiento>
+    <pais>España</pais>
+    <fichaCompleta>https://es.wikipedia.org/wiki/Diego_Vel%C3%A1zquez</fichaCompleta>
+  </artista>
+  <artista cod="a102">
+    <nombreCompleto>Michelangelo Caravaggio</nombreCompleto>
+    <nacimiento>1571</nacimiento>
+    <pais>Italia</pais>
+    <fichaCompleta>https://es.wikipedia.org/wiki/Caravaggio</fichaCompleta>
+  </artista>
+  <artista cod="a103">
+    <nombreCompleto>Herrada de Landsberg</nombreCompleto>
+    <nacimiento>1125</nacimiento>
+    <fallecimiento>1195</fallecimiento>
+    <pais>Alsacia</pais>
+    <fichaCompleta>  https://es.wikipedia.org/wiki/Herrada_de_Landsberg</fichaCompleta>
+  </artista>
+  <artista cod="a104">
+    <nombreCompleto>Francisco de Goya</nombreCompleto>
+    <nacimiento>1746</nacimiento>
+    <fallecimiento>1828</fallecimiento>
+    <pais>España</pais>
+    <fichaCompleta>https://es.wikipedia.org/wiki/Francisco_de_Goya</fichaCompleta>
+  </artista>
+</artistas>
+```
+{: file="artistasej.xml" }
+
+Al aplicar la transformación, el resultado debe ser una página web válida. Es decir, tiene que tener todos los elementos básicos de una página web: título, codificación de caracteres, elementos, html, body y head.
+
+Dentro del cuerpo de la página habrá una tabla, obtenida a partir de los datos del fichero artistas.xml.
+
+- La tabla tendrá una fila por cada artista mostrado, y una primera fila como como cabecera, con los nombres: Código, Nombre, Año de nacimiento, Año de fallecimiento, País y Página web.
+- Como se puede ver en el fichero, el año de fallecimiento no está disponible para todos los artistas. En ese caso, en la columna correspondiente se mostrará el texto "Desconocido".
+- En la última columna, el valor se obtiene del elemento fichaCompleta. Debe mostrarse un vínculo a la dirección adecuada, con el texto "Saber más".
+- Sólo se mostrarán los artistas nacidos después de 1500.
+- Los artistas se mostrarán ordenados por año de nacimiento creciente. Es decir, en la primera fila, el que tenga un año de nacimiento anterior.
+
+Para el fichero `artistasej.xml`{: .filepath} se obtendrá una página web con este aspecto:
+
+![Aspecto tabla resultado en Chrome](tablaArtistasChrome.png)
+_Aspecto tabla resultado en Chrome_
+
+Y este código:
+
+```html
+<html>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Tabla de artistas</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>Código</th>
+        <th>Nombre</th>
+        <th>Año de nacimiento</th>
+        <th>Año de fallecimiento</th>
+        <th>País</th>
+        <th>Página web</th>
+      </tr>
+      <tr>
+        <td>a102</td>
+        <td>Michelangelo Caravaggio</td>
+        <td>1571</td>
+        <td>Desconicido</td>
+        <td>Italia</td>
+        <td>
+          <a target="blank" href="https://es.wikipedia.org/wiki/Caravaggio">Saber más</a>
+        </td>
+      </tr>
+      <tr>
+        <td>a101</td>
+        <td>Diego Velázquez</td>
+        <td>1599</td>
+        <td>1660</td>
+        <td>España</td>
+        <td>
+          <a target="blank" href="https://es.wikipedia.org/wiki/Diego_Vel%C3%A1zquez">Saber más</a>
+        </td>
+      </tr>
+      <tr>
+        <td>a104</td>
+        <td>Francisco de Goya</td>
+        <td>1746</td>
+        <td>1828</td>
+        <td>España</td>
+        <td>
+          <a target="blank" href="https://es.wikipedia.org/wiki/Francisco_de_Goya">Saber más</a>
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
+```
+{: file="salida_artistasej.html" }
 
 {:.activity}
 ### XSLT y XSL-FO
