--- a/_posts/2024-03-02-tarea-rss.md
+++ b/_posts/2024-03-02-tarea-rss.md
@@ -1,5 +1,5 @@
 ---
-title: "Tarea: RSS"
+title: "Tarea: RSS y Atom"
 date: 2024-03-02 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, práctica, tarea, dam, DAM, asir]
@@ -13,6 +13,18 @@ img_path: /assets/img/tarea-rss/
 
 La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
+Ejemplo de entrega
+
+```plaintext
+mruizg_t09.zip
+├───mruizg_t09.pdf
+├───mruizg_rssSinFindes.xml
+├───mruizg_rssConHtml.xml
+├───mruizg_librolm.xml
+├───mruizg_rssConPrograma.xml
+└───mruizg_atom.xml
+```
+
 ## Calificación
 
 La tarea se calificará con una nota de 0 a 10.
@@ -24,9 +36,75 @@ Duración: - h
 Realiza las siguientes actividades.
 
 {:.activity}
-### Agregadores online
+### Consulta web
 
-Crea una cuenta en un agregador de noticias online y:
+Accede a una página web y localiza el enlace RSS o Atom. ¿En qué parte de la página se encuentra? ¿Trae los dos formatos?
+
+{:.activity}
+### Descripción estructura RSS
+
+Localiza un documento RSS de la web y comenta brevemente su estructura y elementos que lo componen. Especifica los elementos obligatorios y, por lo menos, tres secundarios de `<channel>` para un fichero RSS, poniendo un ejemplo de cada uno.
+
+{:.activity}
+### rssSinFindes.xml
+
+Crea un documento RSS donde el agregador no actualice el feed los viernes, sábados y domingos y cuyo nombre será `rssSinFindes.xml`{: .filepath}.
+
+{:.activity}
+### rssConHtml.xml
+
+Crea un documento RSS con una descripción de ítems donde se use HTML y cuyo nombre será `rssConHtml.xml`{: .filepath}.
+
+{:.activity}
+### librolm.xml
+
+Corrige los documentos documento RSS, del Código 1. Aprovecha y revisa los `rssSinFindes.xml`{: .filepath} y `rssConHtml.xml`{: .filepath} también.
+
+```xml
+<?xml version="1.0" encoding="UTF -8"?>
+<rss version="2.0">
+  <channel>
+    <title>Manual LM</title>
+    <link>http: // www.librolm.com </link>
+    <description>Apuntes XML ciclo DAM
+    </ description>
+    <language>es -es</language>
+    <webMaster1>wm@librolm .com
+    </ webMaster1>
+    <item>
+      <title>Esquema HTML </title>
+      <author>autor2@librolm .com </author>
+      <category>informática </category>
+    </item>
+    <item>
+      <title>Esquema XHTML </title>
+      <author>autor1@librolm .com </author>
+      <category>informática </category>
+    </item>
+    <item>
+      <title>Esquema XML </title>
+      <author>autor@librolm .com </author>
+      <category>informática </category>
+    </item>
+  </channel>
+</rss>
+```
+{: file="librolm.xml" }
+
+{:.activity}
+### rssConPrograma.xml
+
+Elabora un fichero RSS sobre la temática que desees usando un programa de creación y edición de feeds cuyo nombre sea `rssConPrograma.xml`{: .filepath} ¿Qué programa has usado?.
+
+{:.activity}
+### atom.xml
+
+Crea un documento Atom que contenga algunos elementos vistos en las diapositivas cuyo nombre sea `atom.xml`{: .filepath}.
+
+{:.activity}
+### Agregadores RSS
+
+Crea una cuenta en un agregador de noticias online, escritorio, móvil o extensión de navegador y:
 
 - Suscríbete a varios canales.
 - Explora las diferentes opciones de la aplicación.
@@ -37,21 +115,11 @@ Documenta con pantallazos y explicaciones:
 - La configuración de canales y la comprobación de que realmente se actualicen.
 - Las opciones que te parezcan más interesantes.
 
-{:.activity}
-### Aplicaciones de escritorio
+{:.question}
+¿Qué ventajas e inconvenientes ves a cada tipo de agregador?
 
-Realiza el mismo trabajo que en el punto anterior, pero empleando aplicaciones de escritorio.
-
-{:.activity}
-### Complementos de navegador
-
-Realiza el mismo trabajo que en el punto anterior, pero empleando complementos de navegador.
-
-{:.activity}
-### Responde razonadamente a estas preguntas
-
-- ¿Qué ventajas e inconvenientes ves a cada tipo de agregador?
-- ¿Qué tipo de agregador te parece más práctico?
+{:.question}
+¿Qué tipo de agregador te parece más práctico?
 
 ## Bibliografía
 
