--- a/_posts/2024-03-02-tarea-rss.md
+++ b/_posts/2024-03-02-tarea-rss.md
@@ -11,9 +11,9 @@ img_path: /assets/img/tarea-rss/
 
 ## Entrega y presentación
 
-La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
+La entrega será en formato ZIP. Dentro del ZIP deberá haber un documento en formato PDF. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
-Ejemplo de entrega
+Ejemplo de entrega:
 
 ```plaintext
 mruizg_t09.zip
@@ -65,26 +65,24 @@ Corrige los documentos documento RSS, del Código 1. Aprovecha y revisa los `rss
 <rss version="2.0">
   <channel>
     <title>Manual LM</title>
-    <link>http: // www.librolm.com </link>
-    <description>Apuntes XML ciclo DAM
-    </ description>
-    <language>es -es</language>
-    <webMaster1>wm@librolm .com
-    </ webMaster1>
+    <link>http://www.librolm.com</link>
+    <description>Apuntes XML ciclo DAM</description>
+    <language>es-es</language>
+    <webMaster1>wm@librolm.com</webMaster1>
     <item>
-      <title>Esquema HTML </title>
-      <author>autor2@librolm .com </author>
-      <category>informática </category>
+      <title>Esquema HTML</title>
+      <author>autor2@librolm.com</author>
+      <category>informática</category>
     </item>
     <item>
-      <title>Esquema XHTML </title>
-      <author>autor1@librolm .com </author>
-      <category>informática </category>
+      <title>Esquema XHTML</title>
+      <author>autor1@librolm.com</author>
+      <category>informática</category>
     </item>
     <item>
-      <title>Esquema XML </title>
-      <author>autor@librolm .com </author>
-      <category>informática </category>
+      <title>Esquema XML</title>
+      <author>autor@librolm.com</author>
+      <category>informática</category>
     </item>
   </channel>
 </rss>
