--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -354,13 +354,25 @@ El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha s
   <autor>Milan Kundera</autor>
   <fechaPublicacion año="1973"/>
 </libro>
+```
+
+```xpath
 //libro[last()]
+```
+
+```xml
 <libro>
   <titulo>Conversación en la catedral</titulo>
   <autor fechaNacimiento="28/03/1936">Mario Vargas Llosa</autor>
   <fechaPublicacion año="1969"/>
 </libro>
+```
+
+```xpath
 //libro[last()-1]
+```
+
+```xml
 <libro>
   <titulo>Pantaleón y las visitadoras</titulo>
   <autor fechaNacimiento="28/03/1936">Mario Vargas Llosa</autor>
