--- a/_posts/2024-03-02-tarea-rss.md
+++ b/_posts/2024-03-02-tarea-rss.md
@@ -28,6 +28,8 @@ La tarea se calificará con una nota de 0 a 10.
 
 Duración: - h
 
+<div class="strawpoll-embed" id="strawpoll_GeZAOdq68nV" style="height: 836px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_GeZAOdq68nV" src="https://strawpoll.com/embed/GeZAOdq68nV" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+
 ## Actividades
 
 Realiza las siguientes actividades.
