--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -242,6 +242,28 @@ Lecciones aprendidas:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Q3GXmHJCcgg?si=CQU02J03ZbKgARbx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+## Bechamel
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YaUlZZ-TXmk?si=aiW5eWTyltjOd1Do" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+Ingredientes:
+
+- 1 litro de leche (2 tazas)
+- 80 g de harina de trigo (1/3 de taza)
+- 80 g de mantequilla sin sal (2 cdas)
+- 2 cucharaditas de sal fina
+- Pimienta molida
+- Nuez moscada
+
+Lecciones aprendidas:
+
+- Fuego medio.
+- Calentar la leche en el microondas para no morirte batiendo.
+
+## Lasaña
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5iGtAPKePjk?si=3TMy3WuwvS4FwUh5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ## Otras cosas
 
 ### Compras
@@ -255,14 +277,14 @@ Lecciones aprendidas:
 | Pan brioche | X |  |  |  | X |
 | Anchoas en aceite | X |  |  |  |  |
 | Kefir | X |  | X | X |  |
-| Chipirones | X |  |  |  |  |
+| Chipirones | X |  | X |  |  |
 | Gambones | X | X | X |  |  |
 | Pan tostado integral | X |  |  |  | X |
 | Pescado | X |  | X |  |  |
 | Maíz | 🔝 | X | X |  |  |
 | Huevos | X | X |  |  |  |
 | Cottage cheese |  | X |  |  |  |
-| Yogurt |  | 🔝 |  |  |  |
+| Yogurt | 🔝 | X |  |  |  |
 | Berlina choco blanco | X | 🔝 |  |  |  |
 | Café bio |  | 🔝 |  |  |  |
 | Descuento por pronta caducidad |  |  | 50% |  |  |
