--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -268,32 +268,30 @@ Lecciones aprendidas:
 
 ### Compras
 
-#### 
-
-| Ingrediente | Mercadona | Lidl | Carrefour | BonArea | Eroski |
-|---|---|---|---|---|---|
-| Tomate frito | 🔝 |  |  |  |  |
-| Tomate en lata | 🔝 | X | X | | X |
-| Pan brioche | X |  |  |  | X |
-| Anchoas en aceite | X |  |  |  |  |
-| Kefir | X |  | X | X |  |
-| Chipirones | X |  | X |  |  |
-| Gambones | X | X | X |  |  |
-| Pan tostado integral | X |  |  |  | X |
-| Pescado | X |  | X |  |  |
-| Maíz | 🔝 | X | X |  |  |
-| Huevos | X | X |  |  |  |
-| Cottage cheese |  | X |  |  |  |
-| Yogurt | 🔝 | X |  |  |  |
-| Berlina choco blanco | X | 🔝 |  |  |  |
-| Café bio |  | 🔝 |  |  |  |
-| Descuento por pronta caducidad |  |  | 50% |  |  |
-| Polenta |  |  | X |  |  |
-| Jamón serrano | X |  |  |  |  |
-| Pollo | X | X | X | 🔝 |  |
-| Mozzarella fresca | X | X | X |  |  |
-| Harina | X | X | X |  |  |
-| Sal marina | X | X | X |  |  |
+| Ingrediente                    | Mercadona | Lidl | Carrefour | BonArea | Eroski |
+| ------------------------------ | --------- | ---- | --------- | ------- | ------ |
+| Tomate frito                   | ⇧         |      |           |         |        |
+| Tomate en lata                 | ⇧         | X    | X         |         | X      |
+| Pan brioche                    | X         |      |           |         | X      |
+| Anchoas en aceite              | X         |      |           |         |        |
+| Kefir                          | X         |      | X         | X       |        |
+| Chipirones                     | X         |      | X         |         |        |
+| Gambones                       | X         | X    | X         |         |        |
+| Pan tostado integral           | X         |      |           |         | X      |
+| Pescado                        | X         |      | X         |         |        |
+| Maíz                           | ⇧         | X    | X         |         |        |
+| Huevos                         | X         | X    |           |         |        |
+| Cottage cheese                 |           | X    |           |         |        |
+| Yogurt                         | ⇧         | X    |           |         |        |
+| Berlina choco blanco           | X         | ⇧    |           |         |        |
+| Café bio                       |           | ⇧    |           |         |        |
+| Descuento por pronta caducidad |           |      | 50%       |         |        |
+| Polenta                        |           |      | X         |         |        |
+| Jamón serrano                  | X         |      |           |         |        |
+| Pollo                          | X         | X    | X         | ⇧       |        |
+| Mozzarella fresca              | X         | X    | X         |         |        |
+| Harina                         | X         | X    | X         |         |        |
+| Sal marina                     | X         | X    | X         |         |        |
 
 ### Horno
 
