--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -78,9 +78,9 @@ mruizg_t12.zip
 
 La tarea se calificará con una nota de 0 a 10.
 
-Duración: - h
+## Duración
 
-<div class="strawpoll-embed" id="strawpoll_6QnMOzKqAZe" style="height: 836px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_6QnMOzKqAZe" src="https://strawpoll.com/embed/6QnMOzKqAZe" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_6QnMOzKqAZe" style="height: 320px; max-width: 640px; width: 100%; height:300px; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_6QnMOzKqAZe" src="https://strawpoll.com/embed/6QnMOzKqAZe" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
 
 ## Actividades
 
