Cambio de altura de Duración

--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -61,9 +61,9 @@ mruizg_t09.zip
 
 La tarea se calificará con una nota de 0 a 10.
 
-Duración: - h
+## Duración
 
-<div class="strawpoll-embed" id="strawpoll_e7ZJGEKqBy3" style="height: 320px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_e7ZJGEKqBy3" src="https://strawpoll.com/embed/e7ZJGEKqBy3" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_e7ZJGEKqBy3" style="max-height: 320px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_e7ZJGEKqBy3" src="https://strawpoll.com/embed/e7ZJGEKqBy3" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
 
 ## Actividades
 
@@ -100,9 +100,9 @@ Escribir un documento XML con una DTD interna que represente la siguiente inform
 PANEL DE VUELOS DE SALIDA DEL AEROPUERTO JFK – 20/12/2013:
 
 | Código | Semanal |  Origen  | Destino | Hora salida | Hora llegada | Estado |
-|:------:|:------:|:--------:|:-------:|:-----------:|:------------:|:------:|
-| V22    | SI     | New York | Chicago | 9:35        | 11:35        | R      |
-| V23    | NO     | New York | Miami   | 10:20       | 11:20        | C      |
+| :----: | :-----: | :------: | :-----: | :---------: | :----------: | :----: |
+|  V22   |   SI    | New York | Chicago |    9:35     |    11:35     |   R    |
+|  V23   |   NO    | New York |  Miami  |    10:20    |    11:20     |   C    |
 
 Consideraciones respecto a la DTD:
 
@@ -121,18 +121,18 @@ Escribir un documento XML con una DTD interna que represente la información con
 FACTURA NÚMERO 27 – FECHA: 18/12/2013:
 
 | DATOS EMISOR:       | DATOS CLIENTE:      |
-|---------------------|---------------------|
+| ------------------- | ------------------- |
 | Librería Pérez      | Biblioteca Txantrea |
 | CIF: 25489194L      | CIF: 68147997D      |
 | Teléfono: 777888999 | Teléfono: 333999444 |
 
 Detalle de la factura:
 
-| CÓDIGO-ARTÍCULO | TIPO  | DESCRIPCIÓN       | CANTIDAD | REACONDICIONADO | PVP |
-|-----------------|-------|-------------------|----------|--------|-----|
-| AW7             | Libro | Analítica Web 2.0 | 1        | SI     | 35€ |
-| CP5             | Varios   | Curso de HTML     | 2        | NO     | 40€ |
-| IMPORTE:        |       |                   |          |        | 95€ |
+| CÓDIGO-ARTÍCULO | TIPO   | DESCRIPCIÓN       | CANTIDAD | REACONDICIONADO | PVP |
+| --------------- | ------ | ----------------- | -------- | --------------- | --- |
+| AW7             | Libro  | Analítica Web 2.0 | 1        | SI              | 35€ |
+| CP5             | Varios | Curso de HTML     | 2        | NO              | 40€ |
+| IMPORTE:        |        |                   |          |                 | 95€ |
 
 Consideraciones respecto a la DTD:
 
