--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -57,13 +57,19 @@ mruizg_t09.zip
 > El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
 {:.prompt-info}
 
-## Calificación
+## Calificación y duración
 
 La tarea se calificará con una nota de 0 a 10.
 
-## Duración
+<details class="card mb-2">
+  <summary class="card-header">Duración</summary>
+  <div class="card-body" markdown="1">
 
-<div class="strawpoll-embed" id="strawpoll_e7ZJGEKqBy3" style="max-height: 320px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_e7ZJGEKqBy3" src="https://strawpoll.com/embed/e7ZJGEKqBy3" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_e7ZJGEKqBy3" style="max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_e7ZJGEKqBy3" src="https://strawpoll.com/embed/e7ZJGEKqBy3" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Actividades
 
