--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -81,13 +81,19 @@ Porque son fragmentos de código XML pero no está bien formado.
 {:.question}
 ¿Puede un fichero XSD ser .xml?
 
-## Calificación
+## Calificación y duración
 
 La tarea se calificará con una nota de 0 a 10.
 
-## Duración
+<details class="card mb-2">
+  <summary class="card-header">Duración</summary>
+  <div class="card-body" markdown="1">
 
-<div class="strawpoll-embed" id="strawpoll_1MnwO2o1dn7" style="max-height: 320px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_1MnwO2o1dn7" src="https://strawpoll.com/embed/1MnwO2o1dn7" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_1MnwO2o1dn7" style="max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_1MnwO2o1dn7" src="https://strawpoll.com/embed/1MnwO2o1dn7" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Actividades
 
