--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -74,13 +74,19 @@ mruizg_t12.zip
         05_pdf.pdf
 ```
 
-## Calificación
+## Calificación y duración
 
 La tarea se calificará con una nota de 0 a 10.
 
-## Duración
+<details class="card mb-2">
+  <summary class="card-header">Duración</summary>
+  <div class="card-body" markdown="1">
 
 <div class="strawpoll-embed" id="strawpoll_6QnMOzKqAZe" style="height: 320px; max-width: 640px; width: 100%; height:300px; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_6QnMOzKqAZe" src="https://strawpoll.com/embed/6QnMOzKqAZe" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Actividades
 
