--- a/_posts/2024-03-02-tarea-rss.md
+++ b/_posts/2024-03-02-tarea-rss.md
@@ -22,13 +22,19 @@ mruizg_t09.zip
 └───mruizg_atom.xml
 ```
 
-## Calificación
+## Calificación y duración
 
 La tarea se calificará con una nota de 0 a 10.
 
-## Duración
+<details class="card mb-2">
+  <summary class="card-header">Duración</summary>
+  <div class="card-body" markdown="1">
 
-<div class="strawpoll-embed" id="strawpoll_GeZAOdq68nV" style="max-height: 320px; max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_GeZAOdq68nV" src="https://strawpoll.com/embed/GeZAOdq68nV" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+<div class="strawpoll-embed" id="strawpoll_GeZAOdq68nV" style="max-width: 640px; width: 100%; margin: 0 auto; display: flex; flex-direction: column;"><iframe title="StrawPoll Embed" id="strawpoll_iframe_GeZAOdq68nV" src="https://strawpoll.com/embed/GeZAOdq68nV" style="position: static; visibility: visible; display: block; width: 100%; flex-grow: 1;" frameborder="0" allowfullscreen allowtransparency>Loading...</iframe><script async src="https://cdn.strawpoll.com/dist/widgets.js" charset="utf-8"></script></div>
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Actividades
 
