--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -10,6 +10,10 @@ img_path: /assets/img/tarea-xsl/
 
 La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
+<details class="card mb-2">
+  <summary class="card-header">Ejemplo de entrega</summary>
+  <div class="card-body" markdown="1">
+
 ```plaintext
 mruizg_t12.zip
 ├───mruizg_a01/
@@ -73,6 +77,10 @@ mruizg_t12.zip
         04_xslfo.xsl
         05_pdf.pdf
 ```
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Calificación y duración
 
