--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -10,7 +10,9 @@ img_path: /assets/img/tarea-xsd/
 
 La entrega será en formato ZIP manteniendo la estructura de carpetas original. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
-Ejemplo de entrega:
+<details class="card mb-2">
+  <summary class="card-header">Ejemplo de entrega</summary>
+  <div class="card-body" markdown="1">
 
 ```plaintext
 mruizg_t10.zip
@@ -67,6 +69,10 @@ mruizg_t10.zip
 
 > El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
 {:.prompt-info}
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 <details class="card mb-2">
   <summary class="card-header question">¿Por qué hay ficheros .xml.txt?</summary>
