--- a/_posts/2024-01-29-tarea-dtd.md
+++ b/_posts/2024-01-29-tarea-dtd.md
@@ -10,7 +10,9 @@ img_path: /assets/img/tarea-dtd/
 
 La entrega será en formato ZIP manteniendo la estructura de carpetas original. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
-Ejemplo de entrega:
+<details class="card mb-2">
+  <summary class="card-header">Ejemplo de entrega</summary>
+  <div class="card-body" markdown="1">
 
 ```plaintext
 mruizg_t09.zip
@@ -56,6 +58,10 @@ mruizg_t09.zip
 
 > El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
 {:.prompt-info}
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Calificación y duración
 
