--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -75,7 +75,7 @@ mruizg_t10.zip
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Por qué hay ficheros .xml.txt?</summary>
+  <summary class="card-header question">¿Por qué hay ficheros .xml.txt en el ejemplo de entrega?</summary>
   <div class="card-body" markdown="1">
 
 Porque son fragmentos de código XML pero no está bien formado.
