--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -78,6 +78,9 @@ mruizg_t12.zip
         05_pdf.pdf
 ```
 
+> El ejemplo de entrega solo es una referencia de entrega, si se necesita eliminar o crear algún fichero o carpeta siéntete libre de hacerlo.
+{:.prompt-info}
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
