--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -4,6 +4,12 @@ date: 2024-03-01 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, práctica, tarea, dam, DAM, asir]
 img_path: /assets/img/tarea-xsl/
+author: [Marcos Ruiz García]
+titlepage: true
+toc-own-page: true
+toc: true
+lang: es-ES
+listings: true
 ---
 
 ## Entrega y presentación
