--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -29,7 +29,7 @@ docker run --rm --volume "<carpeta donde están los .md>:/data" pandoc/extra <en
 Ejemplo:
 
 ```console
-docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\_posts:/data" pandoc/extra 2024-03-20-cuestiones-lopd.md -o 2024-03-20-cuestiones-lopd.pdf --template eisvogel --listings
+docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates"pandoc/extra _posts/2024-03-01-tarea-xsl.md -o _posts/2024-03-01-tarea-xsl.pdf --template eisvogel2 --resource-path "/data/assets/img/tarea-xsl" --number-sections --shift-heading-level-by=-1 --listings
 ```
 
 ## Personalizar documento de salida PDF
