--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -53,16 +53,17 @@ Generalmente hay dos versiones de la tarta de limón:
 Ingredientes:
 
 - Masa base:
-  - 200 gramos de galletas de vainilla.
-  - 150 gramos de mantequilla derretida.
+  - 400 gramos de galletas de vainilla.
+  - 300 gramos de mantequilla derretida.
 - Relleno:
-  - 375 gramos de leche condensada.
-  - 5 yemas.
-  - 100 gramos de zumo de limón.
+  - 750 gramos de leche condensada.
+  - 10 yemas.
+  - 200 gramos de zumo de limón.
 - Merengue Suizo:
-  - 5 claras de huevo (180 gramos).
-  - 270 gramos de azúcar.
-  - Proporción merengue: 1 : 1 1/2 (claras : azúcar)
+  - 5 claras de huevo.
+  - 540 gramos de azúcar.
+  - Proporción merengue: 1 de claras por 1'5 de azucar.
+  - 20 gr de zumo de limón
 
 Utensilios:
 
@@ -74,11 +75,6 @@ Tiempos y temperaturas:
   - Base: 170 C° por 15 minutos.
   - Relleno: 150 C° por 25 - 30 minutos.
   - Merengue: Con el gratidanador o asador prendido (200 C°) por 5 - 8 minutos.
-
-Lecciones aprendidas:
-
-- 5 claras de huevo es mucho para la tarta. Con 2 ó 3 seguramente será más que suficiente.
-- Echar limón la merengue.
 
 ## Fideuá de Gandia con ali oli
 
@@ -156,11 +152,30 @@ Ingredientes:
 - 100 gr por persona es la ración (media taza).
 - 50 gr por persona cuando el arroz es para acompañar.
 
-## Masa de pizza
+## Pizza
 
-Lecciones aprendidas:
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JBHI784AQkA?si=47lLTMhjmI0oMUJP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-- Poner la masa 2 minutos en el suelo del horno ya caliente para que la masa no salga cruda.
+Ingredientes para la masa:
+
+- 400 gr de harina de trigo.
+- 50 grm de harina de maíz.
+- 50 gr de aceite de oliva.
+- 5 gr de levadura en polvo.
+- 250 gr de agua.
+- 8 gr de sal.
+
+Amasar:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EYzWjYK8Ajc?si=jMnqa5aoe_FuF0ST" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KbzZlvzR6gY?si=gEVcPAdLKWZwzb4W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+Hornear:
+
+- Ponemos la masa 2 minutos en el suelo del horno ya caliente para que la masa no salga cruda.
+- Le ponemos el tomate y la volvemos a poner 2 minutos en el fondo.
+- Le ponemos el queso y el resto de ingredientes y la gratinamos arriba durante 5-10 minutos. Los ingredientes cuanto más secos y con menos grasa mejor.
 
 ## Tortilla de patatas jugosa y con cebolla
 
@@ -263,6 +278,24 @@ Lecciones aprendidas:
 ## Lasaña
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5iGtAPKePjk?si=3TMy3WuwvS4FwUh5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## Arroz blanco
+
+1. Calentamos el aceite casi al máximo.
+1. Freímos el ajo y el arroz.
+1. Introducimos el agua.
+1. La clave: Cuando haga chup chup, ponemos la tapa, lo ponemos al mínimo y no lo tocamos hasta que no pasen 15 min.
+1. Destapamos y probamos.
+
+Ingredientes:
+
+- 100 gr de arroz por persona para plato único.
+- 50 gr de arroz por persona para acompañamiento.
+- Doble de agua que de arroz.
+- Sal.
+- Laurel.
+- Ajo.
+- Opcional: Media pastilla de caldo concentrado.
 
 ## Otras cosas
 
