--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -32,12 +32,14 @@ Ejemplo:
 docker run pandoc/extra
 ```
 
+## De documentos Markdown para Jekyll a documentos PDF
+
+Con el siguiente comando y los siguientes ficheros de configuración me genero este [PDF](/assets/img/pandoc/2024-03-01-tarea-xsl.pdf) a mi gusto:
+
 ```console
 docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf --metadata-file
  /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml --lua-filter /data/pandoc/filter.lua
 ```
-
-Ficheros de configuración necesarios:
 
 ```
 listings: true
@@ -183,7 +185,30 @@ return {
 ```
 {: file="filter.lua" }
 
-## Personalizar documento de salida PDF
+## De documentos Markdown para Notion a documentos PDF
+
+Con Markdown sería mucho más sencillo de generar.
+
+```console
+docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf --metadata-file
+ /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml
+```
+
+```
+listings: true
+number-sections: true
+template: "eisvogel2"
+```
+{: file="defaults.yaml" }
+
+```
+author: [Marcos Ruiz García]
+titlepage: true
+toc-own-page: true
+toc: true
+lang: es-ES
+```
+{: file="metadata.yaml" }
 
 ### Interpretar clases de css
 
