--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -24,6 +24,18 @@ Existen varias versiones de XPath aprobadas por el W3C.
 ![Linea del tiempo de las versiones de XPath](xpathTimeline.png)
 _Linea del tiempo de las versiones de XPath_
 
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué versión de XPath debería aprender o utilizar?</summary>
+  <div class="card-body" markdown="1">
+
+XPath 2.0 y versiones posteriores no están soportadas de forma nativa en la mayoría de los lenguajes de programación de alto nivel. Esto incluye lenguajes populares como Java, Python, PHP, JavaScript, C#, entre otros. Estos lenguajes generalmente solo soportan XPath 1.0 de forma nativa a través de sus bibliotecas estándar de procesamiento de XML.
+
+Para usar XPath 2.0 o versiones posteriores en estos lenguajes, generalmente necesitarás una biblioteca de terceros. Por ejemplo, en Java puedes usar Saxon.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
 {:.section}
 ## Árbol del documento
 
@@ -910,16 +922,13 @@ Incluso se puede omitir la selección de nodos /text() de la segunda expresión 
 <titulo>Conversación en la catedral</titulo>
 ```
 
-### Más funciones
+### Funciones XPath 1.0
 
 Además de la función `last()` vista anteriormente que selecciona el último elemento del conjunto seleccionado, existen otras funciones que nos permiten realizar diferentes operaciones:
 
 - `position()`, devuelve un número igual a la posición del elemento actual.
 - `count()`, cuenta el número de elementos seleccionados.
 - `sum()`, devuelve la suma de los elementos seleccionado.
-- `max()`, devuelve el máximo de los elementos seleccionados.
-- `min()`, devuelve el mínimo de los elementos seleccionados.
-- `avg()`, devuelve la media de los elementos seleccionados.
 - `name()`, devuelve el nombre del elemento seleccionado.
 - `concat(<cad1>, <cad2>, ...)`, concatena cadenas.
 - `name()`, devuelve el nombre del elemento seleccionado.
@@ -929,14 +938,31 @@ Además de la función `last()` vista anteriormente que selecciona el último el
 - `string-length(<argumento>)`, devuelve el número de caracteres de su argumento.
 - `div()`, divide.
 - `mod()`, calcula el resto de la división.
+- `string(<argumento>)`, convierte el argumento en string.
+
+> La especificación al completo de XPath 1.0 la tienes en inglés en [este enlace](https://www.w3.org/TR/1999/REC-xpath-19991116/) y su traducción al español [este enlace](http://www.sidar.org/recur/desdi/traduc/es/xml/xpath.html) por si quieres conocer todas las funciones disponibles.
+{:.prompt-info}
+
+### Funciones XPath 2.0
+
+La versión 2.0 e XPath añade más funciones importantes como:
+
+- `max()`, devuelve el máximo de los elementos seleccionados.
+- `min()`, devuelve el mínimo de los elementos seleccionados.
+- `avg()`, devuelve la media de los elementos seleccionados.
 - `data(<expresión XPath>)`, devuelve el texto de los nodos de la expresión sin las etiquetas.
 - `number(<argumento>)`, para convertir a número lo introducido en el argumento.
-- `string(<argumento>)`, convierte el argumento en string.
-- `compare(<exp>, <exp2>)`, compara las dos expresiones, devuelve 0 si son iguales, 1 si exp1>exp2 y -1 si exp1<exp2.
+- `compare(<exp>, <exp2>)`, compara las dos expresiones, devuelve 0 si son iguales, 1 si exp1 \> exp2 y -1 si exp1 \< exp2.
 - `lower-case(<cadena>)`, convierte a minúsculas la cadena.
+
+> La especificación al completo de XPath 2.0 la tienes en inglés en [este enlace](https://www.w3.org/TR/xpath20/). En este caso, no hay versión en español.
+{:.prompt-info}
 
 ## Bibliografía
 
 - <https://www.w3schools.com/xml/xml_xpath.asp>
 - <https://www.w3schools.com/xml/xpath_intro.asp>
 - <https://www.mclibre.org/consultar/xml/lecciones/xml-xpath.html>
+- <https://www.w3.org/TR/1999/REC-xpath-19991116/>
+- <http://www.sidar.org/recur/desdi/traduc/es/xml/xpath.html>
+- <https://www.w3.org/TR/xpath20/>
