--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -1,9 +1,9 @@
 ---
-title: "Markdown a PDF con Pandoc"
+title: "Pandoc"
 date: 2024-03-21 9:00:00 +0100
-categories: [Ciberseguridad en Entornos de las Tecnologías de la Información, Normativa de Ciberseguridad]
-tags: [ciberseguridad en entornos de las tecnologías de la información, normativa de ciberseguridad]
-img_path: /assets/img/legislacion-proteccion-datos/
+categories: [General]
+tags: [pandoc, markdown, pdf, md, eisvogel, plantilla, docker, latex, lua, lualatex, plantilla, jekyll]
+img_path: /assets/img/pandoc/
 ---
 
 ## Introducción
@@ -41,7 +41,7 @@ docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:
  /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml --lua-filter /data/pandoc/filter.lua
 ```
 
-```
+```yaml
 listings: true
 shift-heading-level-by: -1
 number-sections: true
@@ -50,7 +50,7 @@ template: "eisvogel2"
 ```
 {: file="defaults.yaml" }
 
-```
+```yaml
 author: [Marcos Ruiz García]
 titlepage: true
 toc-own-page: true
@@ -59,7 +59,7 @@ lang: es-ES
 ```
 {: file="metadata.yaml" }
 
-```
+```lua
 -- Filtro para clase activity
 function ParaActivity(el)
   -- Si el elemento es un párrafo y contiene "{:.activity}", lo convertimos en un encabezado
@@ -169,8 +169,18 @@ function RemoveFilepaths(el)
 end
 
 -- Filtro para los nombres de los ficheros
-function ParaFile(el)
-  -- TODO
+function ExtractFilePath(el)
+  -- Si el elemento es un párrafo
+  if el.tag == "Para" then
+    local content = pandoc.utils.stringify(el)
+    -- Buscamos los párrafos que empiezan por "{: file=\"" y terminan con "\" }"
+    local filepath = content:match("{:%s?file=“(.-)”%s?}")
+    -- Si encontramos un filepath, devolvemos un nuevo párrafo con el filepath como contenido
+    if filepath then
+      return pandoc.Para("Fichero: " .. filepath)
+    end
+  end
+  -- Devolvemos el elemento sin cambios si no es un párrafo que cumple con el patrón
   return el
 end
 
@@ -180,7 +190,8 @@ return {
   {Para = ParaSubsection},
   {Para = ParaSubsubsetion},
   {Para = RemovePrompts},
-  {Para = RemoveFilepaths}
+  {Para = RemoveFilepaths},
+  {Para = ExtractFilePath}
 }
 ```
 {: file="filter.lua" }
@@ -194,14 +205,14 @@ docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:
  /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml
 ```
 
-```
+```yaml
 listings: true
 number-sections: true
 template: "eisvogel2"
 ```
 {: file="defaults.yaml" }
 
-```
+```yaml
 author: [Marcos Ruiz García]
 titlepage: true
 toc-own-page: true
